# RotarySlider

./: .coderabbit.yaml  Makefile  README.md  index.html  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: evolution-gate.yml
.idx/: dev.nix
assets/brand/: BRAND_IDENTITY.md
docs/: CODERABBIT_POEMS.md  ISOMORPHISM_MANIFESTO.md  THOUGHTS.md
docs/evolution/: HARDWARE_OPTIMIZATION_SCOPE.md  INSTRUCTION_MANUAL.md  PLUGIN_STANDALONE.md
docs/superpowers/plans/: 2026-06-04-3d-frontend-implementation.md  2026-06-04-feature-studio-implementation.md  2026-06-06-isoz-identity.md  2026-06-06-truth-resolver-prototype.md
docs/superpowers/specs/: 2026-06-04-3d-frontend-mapping.md  2026-06-04-feature-studio-design.md  2026-06-06-isoz-identity-design.md  2026-06-06-truth-resolver-prototype-design.md
docs/theory/: GEOMETRIC_DETERMINISM.md  TRUTH_RESOLVER_ROADMAP.md
scripts/: aaa_quality.py  akashic_records.py  api_server.py  chaos_monkey.py  cli.py  evolution_gate_template.py  evolve.py  hardware_piping.py  mcp_server.py  oracle.py  quantum_gate.py  recursive_evolution.py  release.py  truth_resolver.py  visual_matrix.py
skills/innovation-searching/: SKILL.md
skills/maxval-effect-intent/: SKILL.md
tests/: test_aaa_quality_imports.py  test_hardware_piping.py  test_truth_resolver.py
tests/fixtures/: action_fail.json  action_pass.json
ui/studio/: .gitignore  package-lock.json  package.json  tailwind.config.js
ui/studio/src/app/: ClientViews.tsx  (+3 more)
ui/telemetry/: package.json  vite.config.js
ui/telemetry/src/: App.svelte
(+13 files in other folders)
