[project]
name = "RotarySlider"
version = "0.1.0"
description = "Autonomous pretraining research swarm with agentic superpower skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "rich>=13.0.0",
    "mcp>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "playwright>=1.38.0",
    "flake8>=6.0.0",
    "bandit>=1.7.5",
    "radon>=6.0.1"
]

[tool.setuptools]
py-modules = ["prepare", "train"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
